# clear_ml

./: .gitignore  clearml_test.ipynb  model.pkl  pyproject.toml  training_model.py
